exports[`BpkCheckbox should render correctly 1`] = `
<label
  className="bpk-checkbox">
  <input
    className="bpk-checkbox__input"
    disabled={false}
    name="checkbox"
    onChange={[Function]}
    type="checkbox"
    value="checkbox" />
</label>
`;

exports[`BpkCheckbox should render correctly with checked attribute 1`] = `
<label
  className="bpk-checkbox">
  <input
    checked={true}
    className="bpk-checkbox__input"
    disabled={false}
    name="checkbox"
    onChange={[Function]}
    type="checkbox"
    value="checkbox" />
</label>
`;

exports[`BpkCheckbox should render correctly with disabled attribute 1`] = `
<label
  className="bpk-checkbox bpk-checkbox--disabled">
  <input
    className="bpk-checkbox__input"
    disabled={true}
    name="checkbox"
    onChange={[Function]}
    type="checkbox"
    value="checkbox" />
</label>
`;

exports[`BpkCheckbox should render correctly with id attribute 1`] = `
<label
  className="bpk-checkbox">
  <input
    className="bpk-checkbox__input"
    disabled={false}
    id="checkbox"
    name="checkbox"
    onChange={[Function]}
    type="checkbox"
    value="checkbox" />
</label>
`;

exports[`BpkCheckbox should render correctly with label attribute 1`] = `
<label
  className="bpk-checkbox">
  <input
    className="bpk-checkbox__input"
    disabled={false}
    name="checkbox"
    onChange={[Function]}
    type="checkbox"
    value="checkbox" />
   My label
</label>
`;

exports[`BpkCheckbox should render correctly with value attribute 1`] = `
<label
  className="bpk-checkbox">
  <input
    className="bpk-checkbox__input"
    disabled={false}
    name="checkbox"
    onChange={[Function]}
    type="checkbox"
    value="my-value" />
</label>
`;
